--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <article>
             <div class="box">
                 <div class="article_head">
-                    <a href="#" class="profile">어피치</a>
+                    <a href="#" class="profile">라이언</a>
                     <div class="info">
-                        <strong>어피치</strong>
+                        <strong>라이언</strong>
                         <span class="txt_time">2일전</span>
                     </div>
                 </div>
